--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="kr.hs.emirim.petto99.simplediarytest.MainActivity">
 
     <DatePicker
+        android:id="@+id/datepicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
@@ -14,11 +16,13 @@
         />
 
      <EditText
+         android:id="@+id/edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:lines="10"
          />
     <Button
+        android:id="@+id/but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
